# docs/swagger.json
@@ -285,10 +285,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "success response",
-                        "schema": {
-                            "$ref": "#/definitions/output.ActionGameResponse"
-                        }
+                        "description": "success response"
                     },
                     "400": {
                         "description": "error response"
@@ -336,10 +333,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "success response",
-                        "schema": {
-                            "$ref": "#/definitions/output.ReadyGameResponse"
-                        }
+                        "description": "success response"
                     },
                     "400": {
                         "description": "error response"
@@ -543,14 +537,6 @@
                 }
             }
         },
-        "output.ActionGameResponse": {
-            "type": "object",
-            "properties": {
-                "skill": {
-                    "$ref": "#/definitions/types.Skill"
-                }
-            }
-        },
         "output.CreateEncounterResponse": {
             "type": "object",
             "properties": {
@@ -626,50 +612,6 @@
                     "type": "string"
                 }
             }
-        },
-        "output.ReadyGameResponse": {
-            "type": "object"
-        },
-        "types.Skill": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "required_bp": {
-                    "type": "integer"
-                },
-                "skill_id": {
-                    "description": "BP制にする。毎ターン+2もらえる",
-                    "type": "integer"
-                },
-                "skill_name": {
-                    "type": "string"
-                },
-                "skill_type": {
-                    "$ref": "#/definitions/types.SkillType"
-                },
-                "skill_value": {
-                    "type": "number"
-                }
-            }
-        },
-        "types.SkillType": {
-            "type": "string",
-            "enum": [
-                "attack",
-                "defence",
-                "buf",
-                "debuf",
-                "heal"
-            ],
-            "x-enum-varnames": [
-                "TypeAttack",
-                "TypeDefence",
-                "TypeBuf",
-                "TypeDebuf",
-                "TypeHeal"
-            ]
         }
     }
 }
